# real_state

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: ci_cd.yml
data/processed/: log_consulting.ipynb
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Property_Friends_basic_model_nb.ipynb
property_friends_real_state/: __init__.py  config.py  dataset.py  features.py  plots.py
property_friends_real_state/app/: app.py
property_friends_real_state/modeling/: get_data.py  predict.py  train.py
