[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "property_friends_real_state"
version = "0.0.1"
description = "The goal of the project is to build a pipeline to train and deploy a ML Model ensuring reproducibility and scalability"
authors = [
  { name = "Joyce S\u00e1" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["property_friends_real_state"]
force_sort_within_sections = true
